--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ function submitFacultyFeedback(){
     comments:document.getElementById("comments").value
   };
 
-  fetch("YOUR_GOOGLE_SCRIPT_URL",{
+  fetch("https://script.google.com/macros/s/AKfycbxJ_v3h3Q39RykPcxrgoTKe7Og8lcwoQn0_E1ASYXE-prVh1C-2kphYu8eH2NGGGdYD/exec",{
     method:"POST",
     headers:{"Content-Type":"application/json"},
     body:JSON.stringify(payload)
@@ -218,3 +218,4 @@ function submitFacultyFeedback(){
 </script>
 </body>
 </html>
+
