--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     <div class="space-y-4">
       <input type="text" id="studentName" placeholder="Full Name *" class="w-full p-2 border rounded">
       <input type="text" id="regNumber" placeholder="Registration Number *" class="w-full p-2 border rounded">
-      <input type="text" id="batchId" placeholder="Batch ID *" class="w-full p-2 border rounded">
       <input type="email" id="email" placeholder="Email *" class="w-full p-2 border rounded">
       <input type="tel" id="mobile" placeholder="Mobile Number *" class="w-full p-2 border rounded">
     </div>
@@ -60,6 +59,11 @@
   <div id="page3" class="form-page bg-white rounded-lg shadow-md p-6">
     <h2 class="text-2xl font-semibold text-gray-800 mb-2">Feedback for <span id="currentFaculty" class="text-blue-600"></span></h2>
     <div class="space-y-4" id="questionsContainer">
+
+      <!-- Batch ID -->
+      <input type="text" id="batchId" placeholder="Batch ID *" class="w-full p-2 border rounded">
+
+      <!-- Dropdown Questions -->
       <select id="attendance" class="ratingSelect"></select>
       <select id="discipline" class="ratingSelect"></select>
       <select id="participation" class="ratingSelect"></select>
@@ -77,9 +81,15 @@
       <select id="accessibility" class="ratingSelect"></select>
       <select id="guidance" class="ratingSelect"></select>
       <select id="motivation" class="ratingSelect"></select>
+
+      <!-- Quiz -->
       <input type="text" id="quizMarks" placeholder="Quiz Marks *" class="w-full p-2 border rounded">
+
+      <!-- Score + Grade -->
       <span id="weightedScoreDisplay" class="block px-4 py-2 border rounded bg-gray-100">Weighted Score: 0</span>
       <span id="gradeDisplay" class="block px-4 py-2 border rounded bg-gray-100">Grade: -</span>
+
+      <!-- Comments -->
       <textarea id="comments" rows="3" placeholder="Additional Comments (Optional)" class="w-full p-2 border rounded"></textarea>
     </div>
 
@@ -124,10 +134,9 @@ function showPage(id){document.querySelectorAll(".form-page").forEach(p=>p.class
 function validatePage1(){
   let name=document.getElementById("studentName").value.trim();
   let reg=document.getElementById("regNumber").value.trim();
-  let batch=document.getElementById("batchId").value.trim();
   let email=document.getElementById("email").value.trim();
   let mob=document.getElementById("mobile").value.trim();
-  if(!name||!reg||!batch||!email||!mob){alert("Fill all details");return;}
+  if(!name||!reg||!email||!mob){alert("Fill all details");return;}
   showFacultySelection();
 }
 
@@ -149,6 +158,7 @@ function startFeedback(){
   showPage("page3");
   document.getElementById("currentFaculty").innerText=faculties[selectedFacultyIndex];
   document.querySelectorAll("#questionsContainer select").forEach(el=>el.selectedIndex=0);
+  document.getElementById("batchId").value="";
   document.getElementById("quizMarks").value="";
   document.getElementById("comments").value="";
 }
@@ -158,8 +168,10 @@ function getScore(id){let v=document.getElementById(id).value;if(!v) return 0;re
 
 // submit
 function submitFacultyFeedback(){
+  let batch=document.getElementById("batchId").value.trim();
+  if(!batch){alert("Batch ID is required");return;}
   let selects=document.querySelectorAll("#questionsContainer select");
-  for(let el of selects){if(!el.value){alert("Fill all fields");return;}}
+  for(let el of selects){if(!el.value){alert("Fill all dropdowns");return;}}
   let quiz=parseFloat(document.getElementById("quizMarks").value)||0;
   if(quiz<=0){alert("Quiz marks must be valid");return;}
 
@@ -174,10 +186,10 @@ function submitFacultyFeedback(){
   let payload={
     studentName:document.getElementById("studentName").value,
     regNumber:document.getElementById("regNumber").value,
-    batchId:document.getElementById("batchId").value,
     email:document.getElementById("email").value,
     mobile:document.getElementById("mobile").value,
     faculty:faculties[selectedFacultyIndex],
+    batchId:batch,
     attendance:getScore("attendance"),
     discipline:getScore("discipline"),
     participation:getScore("participation"),
@@ -201,7 +213,7 @@ function submitFacultyFeedback(){
     comments:document.getElementById("comments").value
   };
 
-  fetch("https://script.google.com/macros/s/AKfycbxJ_v3h3Q39RykPcxrgoTKe7Og8lcwoQn0_E1ASYXE-prVh1C-2kphYu8eH2NGGGdYD/exec",{
+  fetch("YOUR_GOOGLE_SCRIPT_URL",{
     method:"POST",
     headers:{"Content-Type":"application/json"},
     body:JSON.stringify(payload)
@@ -218,4 +230,3 @@ function submitFacultyFeedback(){
 </script>
 </body>
 </html>
-
