--- a/index.html
+++ b/index.html
@@ -6,148 +6,156 @@
   <title>Student Feedback Form</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: #f9fafc;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+    }
+    .form-card {
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+      padding: 32px;
+      max-width: 720px;
+      width: 100%;
+      margin: auto;
+    }
     .form-page { display: none; }
     .form-page.active { display: block; }
-    .faculty-card { transition: all 0.3s ease; }
-    .faculty-card:hover { transform: translateY(-2px); box-shadow: 0 10px 25px rgba(0,0,0,0.1);}
-    .progress-bar { transition: width 0.5s ease-in-out; }
+    label {
+      display: block;
+      font-weight: 500;
+      margin-bottom: 6px;
+      color: #333;
+    }
+    input, select, textarea {
+      width: 100%;
+      padding: 10px 12px;
+      border: 1px solid #d1d5db;
+      border-radius: 8px;
+      outline: none;
+      transition: all 0.2s;
+    }
+    input:focus, select:focus, textarea:focus {
+      border-color: #6366f1;
+      box-shadow: 0 0 0 2px rgba(99,102,241,0.2);
+    }
+    button {
+      border-radius: 8px;
+      padding: 10px 20px;
+      font-weight: 600;
+    }
+    .btn-primary {
+      background: #6366f1;
+      color: white;
+    }
+    .btn-secondary {
+      background: #6b7280;
+      color: white;
+    }
+    .result-box {
+      padding: 10px;
+      border-radius: 8px;
+      background: #f3f4f6;
+      margin-top: 8px;
+    }
   </style>
 </head>
-<body class="bg-gray-50 min-h-screen">
-<div class="container mx-auto px-4 py-8 max-w-4xl">
+<body>
+  <div class="form-card">
 
-  <!-- Header -->
-  <div class="text-center mb-8">
-    <h1 class="text-3xl font-bold text-black mb-1">THE INSTITUTE OF CHARTERED ACCOUNTANTS OF INDIA</h1>
-    <h2 class="text-4xl font-bold text-blue-800 mb-4">STUDENT FEEDBACK FORM</h2>
-    <p class="text-gray-600">Your feedback helps us improve the quality of education</p>
-  </div>
-
-  <!-- Progress Bar -->
-  <div class="mb-8 bg-white rounded-lg shadow-sm p-4">
-    <div class="flex justify-between items-center mb-2">
-      <span class="text-sm font-medium text-gray-700">Progress</span>
-      <span class="text-sm font-medium text-blue-600" id="progress-text">0%</span>
+    <!-- Header -->
+    <div class="text-center mb-8">
+      <h1 class="text-2xl font-bold text-gray-800">THE INSTITUTE OF CHARTERED ACCOUNTANTS OF INDIA</h1>
+      <h2 class="text-3xl font-bold text-indigo-600 mt-2">STUDENT FEEDBACK FORM</h2>
     </div>
-    <div class="w-full bg-gray-200 rounded-full h-2">
-      <div class="progress-bar bg-blue-600 h-2 rounded-full" style="width:0%"></div>
+
+    <!-- Page 1: Student Info -->
+    <div id="page1" class="form-page active">
+      <h2 class="text-xl font-semibold mb-6">Student Information</h2>
+      <div class="space-y-4">
+        <input type="text" id="studentName" placeholder="Full Name *">
+        <input type="text" id="regNumber" placeholder="Registration Number * (AAA1234567)">
+        <input type="email" id="email" placeholder="Email *">
+        <input type="tel" id="mobile" placeholder="Mobile Number * (10 digits)">
+      </div>
+      <div class="mt-8 text-right">
+        <button onclick="validatePage1()" class="btn-primary">Next → Select Faculty</button>
+      </div>
     </div>
-  </div>
 
-  <!-- Page 1: Student Info -->
-  <div id="page1" class="form-page active bg-white rounded-lg shadow-md p-6">
-    <h2 class="text-2xl font-semibold text-gray-800 mb-6">Student Information</h2>
-    <div class="space-y-4">
-      <input type="text" id="studentName" placeholder="Full Name *" class="w-full p-2 border rounded">
-      <input type="text" id="regNumber" placeholder="Registration Number *" class="w-full p-2 border rounded">
-      <input type="email" id="email" placeholder="Email *" class="w-full p-2 border rounded">
-      <input type="tel" id="mobile" placeholder="Mobile Number *" class="w-full p-2 border rounded">
+    <!-- Page 2: Faculty Selection -->
+    <div id="page2" class="form-page">
+      <h2 class="text-xl font-semibold mb-6">Select Faculty</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4" id="facultyGrid"></div>
     </div>
-    <div class="mt-8 flex justify-end">
-      <button onclick="validatePage1()" class="bg-blue-600 text-white px-6 py-2 rounded-md">Next → Select Faculty</button>
+
+    <!-- Page 3: Feedback -->
+    <div id="page3" class="form-page">
+      <h2 class="text-xl font-semibold mb-2">Feedback for <span id="currentFaculty" class="text-indigo-600"></span></h2>
+      <div class="space-y-4 mt-4" id="questionsContainer">
+        
+        <!-- Batch ID -->
+        <label>Batch ID *</label>
+        <input type="text" id="batchId" placeholder="Batch ID">
+
+        <!-- Rating Questions -->
+        <div id="ratings"></div>
+
+        <!-- Quiz Marks -->
+        <label>Quiz Marks *</label>
+        <input type="number" step="0.01" min="1" max="100" id="quizMarks" placeholder="Enter quiz marks">
+
+        <!-- Auto Calculated -->
+        <div class="result-box" id="weightedScoreDisplay">Weighted Score: 0</div>
+        <div class="result-box" id="gradeDisplay">Grade: -</div>
+
+        <!-- Comments -->
+        <label>Additional Comments (Optional)</label>
+        <textarea id="comments" rows="3"></textarea>
+      </div>
+      <div class="mt-8 flex justify-between">
+        <button onclick="showFacultySelection()" class="btn-secondary">← Back</button>
+        <button onclick="submitFacultyFeedback()" class="btn-primary">Submit Feedback →</button>
+      </div>
     </div>
-  </div>
 
-  <!-- Page 2: Faculty Selection -->
-  <div id="page2" class="form-page bg-white rounded-lg shadow-md p-6">
-    <h2 class="text-2xl font-semibold text-gray-800 mb-6">Select Faculty for Feedback</h2>
-    <p class="text-gray-600 mb-6">Please select one faculty at a time. Completed faculties are highlighted in green.</p>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4" id="facultyGrid"></div>
-  </div>
-
-  <!-- Page 3: Feedback -->
-  <div id="page3" class="form-page bg-white rounded-lg shadow-md p-6">
-    <h2 class="text-2xl font-semibold text-gray-800 mb-2">Feedback for <span id="currentFaculty" class="text-blue-600"></span></h2>
-    <div class="space-y-4" id="questionsContainer">
-
-<div class="space-y-4" id="questionsContainer">
-
-  <!-- Batch ID -->
-  <label class="block font-medium">Batch ID</label>
-  <input type="text" id="batchId" placeholder="Batch ID *" class="w-full p-2 border rounded">
-
-  <!-- Dropdown Questions with Labels -->
-  <label class="block font-medium">Attendance & Punctuality</label>
-  <select id="attendance" class="ratingSelect"></select>
-
-  <label class="block font-medium">Discipline</label>
-  <select id="discipline" class="ratingSelect"></select>
-
-  <label class="block font-medium">Active Participation</label>
-  <select id="participation" class="ratingSelect"></select>
-
-  <label class="block font-medium">Group Activities & Teamwork</label>
-  <select id="teamwork" class="ratingSelect"></select>
-
-  <label class="block font-medium">Presentation Content</label>
-  <select id="presentationContent" class="ratingSelect"></select>
-
-  <label class="block font-medium">Presentation Delivery</label>
-  <select id="presentationDelivery" class="ratingSelect"></select>
-
-  <label class="block font-medium">Communication Skills</label>
-  <select id="communication" class="ratingSelect"></select>
-
-  <label class="block font-medium">Analytical Thinking</label>
-  <select id="analytical" class="ratingSelect"></select>
-
-  <label class="block font-medium">Creativity & Innovation</label>
-  <select id="creativity" class="ratingSelect"></select>
-
-  <label class="block font-medium">Professional Ethics Awareness</label>
-  <select id="ethics" class="ratingSelect"></select>
-
-  <label class="block font-medium">Emotional Intelligence</label>
-  <select id="emotional" class="ratingSelect"></select>
-
-  <label class="block font-medium">Overall Engagement</label>
-  <select id="overallEngagement" class="ratingSelect"></select>
-
-  <label class="block font-medium">Professional Dress Code</label>
-  <select id="dressCode" class="ratingSelect"></select>
-
-  <label class="block font-medium">Industry / Practice Real-life Examples</label>
-  <select id="industryExamples" class="ratingSelect"></select>
-
-  <label class="block font-medium">Accessibility for Clarification</label>
-  <select id="accessibility" class="ratingSelect"></select>
-
-  <label class="block font-medium">Personalised Guidance</label>
-  <select id="guidance" class="ratingSelect"></select>
-
-  <label class="block font-medium">Inspiring / Motivating</label>
-  <select id="motivation" class="ratingSelect"></select>
-
-  <!-- Quiz Marks -->
-  <label class="block font-medium">Quiz Marks</label>
-  <input type="text" id="quizMarks" placeholder="Quiz Marks *" class="w-full p-2 border rounded">
-
-  <!-- Score + Grade -->
-  <span id="weightedScoreDisplay" class="block px-4 py-2 border rounded bg-gray-100">Weighted Score: 0</span>
-  <span id="gradeDisplay" class="block px-4 py-2 border rounded bg-gray-100">Grade: -</span>
-
-  <!-- Comments -->
-  <label class="block font-medium">Additional Comments (Optional)</label>
-  <textarea id="comments" rows="3" class="w-full p-2 border rounded"></textarea>
-</div>
-
-    <div class="mt-8 flex justify-between">
-      <button onclick="showFacultySelection()" class="bg-gray-500 text-white px-6 py-2 rounded-md">← Back</button>
-      <button onclick="submitFacultyFeedback()" class="bg-blue-600 text-white px-6 py-2 rounded-md">Next →</button>
+    <!-- Page 4: Thank You -->
+    <div id="page4" class="form-page text-center">
+      <h2 class="text-3xl font-bold text-green-600 mb-4">All Feedback Submitted Successfully!</h2>
+      <p class="text-gray-600">Thank you for your valuable feedback.</p>
     </div>
   </div>
-
-  <!-- Page 4: Thank You -->
-  <div id="page4" class="form-page bg-white rounded-lg shadow-md p-6 text-center">
-    <h2 class="text-3xl font-bold text-green-600 mb-4">All Feedback Submitted Successfully!</h2>
-    <p class="text-gray-600 mb-6">Thank you for your valuable feedback.</p>
-  </div>
-</div>
 
 <script>
 let faculties = ["Sandeep Agarwal","Bhanu Dhir","Shekhar Sharma","Anju Gupta","Preeti Goel","Rohit Agarwal","Sunita Rathore"];
 let completedFaculties = [];
 let selectedFacultyIndex = -1;
+
+const questions = [
+  "Attendance & Punctuality",
+  "Professional Image & Engagement",
+  "Discipline",
+  "Active Participation",
+  "Group Activities & Teamwork",
+  "Presentation - Content",
+  "Presentation - Delivery",
+  "Communication Skills",
+  "Analytical Thinking",
+  "Creativity & Innovation",
+  "Professional Ethics Awareness",
+  "Student-Faculty Interaction Quality",
+  "Overall Engagement",
+  "Politeness & Courtesy",
+  "Use of Real-World Examples",
+  "Ease of Asking Questions",
+  "Individual Attention to Students",
+  "Encourages and Motivates Students"
+];
 
 const scoreMap = {
   "1: Poor": 20,
@@ -157,36 +165,54 @@ const scoreMap = {
   "5: Excellent": 100
 };
 
-// populate dropdowns
-document.querySelectorAll(".ratingSelect").forEach(sel=>{
-  sel.innerHTML = `<option value="">Select rating</option>
-  <option>1: Poor</option><option>2: Below Average</option>
-  <option>3: Average</option><option>4: Good</option>
-  <option>5: Excellent</option>`;
+// generate rating questions
+const ratingsDiv=document.getElementById("ratings");
+questions.forEach((q,i)=>{
+  let label=document.createElement("label");label.innerText=q;
+  let select=document.createElement("select");
+  select.className="ratingSelect";
+  select.innerHTML=`<option value="">Select rating</option>
+    <option>1: Poor</option>
+    <option>2: Below Average</option>
+    <option>3: Average</option>
+    <option>4: Good</option>
+    <option>5: Excellent</option>`;
+  select.onchange=updateScore;
+  ratingsDiv.appendChild(label);ratingsDiv.appendChild(select);
 });
 
-// show page
-function showPage(id){document.querySelectorAll(".form-page").forEach(p=>p.classList.remove("active"));document.getElementById(id).classList.add("active");}
+// navigation
+function showPage(id){
+  document.querySelectorAll(".form-page").forEach(p=>p.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
+}
 
-// validation
+// validate page1
 function validatePage1(){
   let name=document.getElementById("studentName").value.trim();
   let reg=document.getElementById("regNumber").value.trim();
   let email=document.getElementById("email").value.trim();
   let mob=document.getElementById("mobile").value.trim();
-  if(!name||!reg||!email||!mob){alert("Fill all details");return;}
+
+  if(!name||!reg||!email||!mob){alert("All fields required");return;}
+  if(!/^[A-Za-z]{3}[0-9]{7}$/.test(reg)){alert("Registration No. must be 3 letters + 7 digits");return;}
+  if(!/\S+@\S+\.\S+/.test(email)){alert("Invalid Email");return;}
+  if(!/^\d{10}$/.test(mob)){alert("Mobile must be 10 digits");return;}
+
   showFacultySelection();
 }
 
-// show faculty selection
+// show faculty list
 function showFacultySelection(){
   showPage("page2");
   const grid=document.getElementById("facultyGrid");grid.innerHTML="";
   faculties.forEach((f,i)=>{
     let card=document.createElement("div");
-    card.className="faculty-card p-4 border rounded-md text-center "+(completedFaculties.includes(f)?"bg-green-200":"bg-gray-50 cursor-pointer");
-    card.innerHTML=`<h3 class="font-semibold">${f}</h3>`;
-    if(!completedFaculties.includes(f)){card.onclick=()=>{selectedFacultyIndex=i;startFeedback();};}
+    card.className="p-4 border rounded-lg text-center cursor-pointer "+(completedFaculties.includes(f)?"bg-green-100":"hover:bg-indigo-50");
+    card.innerHTML=`<h3 class="font-medium">${f}</h3>`;
+    if(!completedFaculties.includes(f)){
+      card.onclick=()=>{selectedFacultyIndex=i;startFeedback();};
+    }
     grid.appendChild(card);
   });
 }
@@ -195,77 +221,48 @@ function showFacultySelection(){
 function startFeedback(){
   showPage("page3");
   document.getElementById("currentFaculty").innerText=faculties[selectedFacultyIndex];
-  document.querySelectorAll("#questionsContainer select").forEach(el=>el.selectedIndex=0);
+  document.querySelectorAll(".ratingSelect").forEach(el=>el.selectedIndex=0);
   document.getElementById("batchId").value="";
   document.getElementById("quizMarks").value="";
   document.getElementById("comments").value="";
+  updateScore();
 }
 
 // get score
-function getScore(id){let v=document.getElementById(id).value;if(!v) return 0;return scoreMap[v]||0;}
+function getScore(el){return scoreMap[el.value]||0;}
 
-// submit
+// live update weighted + grade
+function updateScore(){
+  let selects=document.querySelectorAll(".ratingSelect");
+  let total=0,count=0;
+  selects.forEach(el=>{if(el.value){total+=getScore(el);count++;}});
+  let avg=(count>0)?total/count:0;
+  let quiz=parseFloat(document.getElementById("quizMarks").value)||0;
+  let weighted=(avg+quiz)/2;
+  if(weighted>0){
+    document.getElementById("weightedScoreDisplay").innerText="Weighted Score: "+weighted.toFixed(2);
+    let grade="-";
+    if(weighted>=85) grade="A+"; else if(weighted>=70) grade="A"; else if(weighted>=55) grade="B+"; else if(weighted>=40) grade="B"; else grade="C";
+    document.getElementById("gradeDisplay").innerText="Grade: "+grade;
+  }
+}
+
+// submit feedback
 function submitFacultyFeedback(){
   let batch=document.getElementById("batchId").value.trim();
-  if(!batch){alert("Batch ID is required");return;}
-  let selects=document.querySelectorAll("#questionsContainer select");
-  for(let el of selects){if(!el.value){alert("Fill all dropdowns");return;}}
-  let quiz=parseFloat(document.getElementById("quizMarks").value)||0;
-  if(quiz<=0){alert("Quiz marks must be valid");return;}
+  if(!batch){alert("Batch ID required");return;}
+  let selects=document.querySelectorAll(".ratingSelect");
+  for(let el of selects){if(!el.value){alert("All ratings required");return;}}
+  let quiz=parseFloat(document.getElementById("quizMarks").value);
+  if(isNaN(quiz)||quiz<1||quiz>100){alert("Quiz marks must be 1-100");return;}
 
-  // calculate weighted & grade
-  let total=0,count=0;
-  selects.forEach(el=>{total+=getScore(el.id);count++;});
-  let avg=total/count;
-  let weighted=(avg+quiz)/2;
-  let grade="-";
-  if(weighted>=85) grade="A+"; else if(weighted>=70) grade="A"; else if(weighted>=55) grade="B+"; else if(weighted>=40) grade="B"; else grade="C";
-
-  let payload={
-    studentName:document.getElementById("studentName").value,
-    regNumber:document.getElementById("regNumber").value,
-    email:document.getElementById("email").value,
-    mobile:document.getElementById("mobile").value,
-    faculty:faculties[selectedFacultyIndex],
-    batchId:batch,
-    attendance:getScore("attendance"),
-    discipline:getScore("discipline"),
-    participation:getScore("participation"),
-    teamwork:getScore("teamwork"),
-    presentationContent:getScore("presentationContent"),
-    presentationDelivery:getScore("presentationDelivery"),
-    communication:getScore("communication"),
-    analytical:getScore("analytical"),
-    creativity:getScore("creativity"),
-    ethics:getScore("ethics"),
-    emotional:getScore("emotional"),
-    overallEngagement:getScore("overallEngagement"),
-    dressCode:getScore("dressCode"),
-    industryExamples:getScore("industryExamples"),
-    accessibility:getScore("accessibility"),
-    guidance:getScore("guidance"),
-    motivation:getScore("motivation"),
-    quizMarks:quiz,
-    weightedScore:weighted.toFixed(2),
-    grade:grade,
-    comments:document.getElementById("comments").value
-  };
-
-  fetch("YOUR_GOOGLE_SCRIPT_URL",{
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify(payload)
-  }).then(r=>{
-    if(r.ok){
-      completedFaculties.push(faculties[selectedFacultyIndex]);
-      let percent=Math.round((completedFaculties.length/faculties.length)*100);
-      document.querySelector(".progress-bar").style.width=percent+"%";
-      document.getElementById("progress-text").innerText=percent+"%";
-      if(completedFaculties.length>=faculties.length) showPage("page4"); else showFacultySelection();
-    }else alert("Error submitting feedback");
-  }).catch(e=>alert("Fetch Error: "+e.message));
+  completedFaculties.push(faculties[selectedFacultyIndex]);
+  if(completedFaculties.length>=faculties.length){
+    showPage("page4");
+  } else {
+    showFacultySelection();
+  }
 }
 </script>
 </body>
 </html>
-
